--- a/src/components/main.css
+++ b/src/components/main.css
@@ -12,8 +12,8 @@
 
 #contentBox{
   position: relative;
-  width: 50%;
-  left: 25%;
+  width: 60%;
+  left: 20%;
   text-align: center;
   top: -45px;
 }
